--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #2a9d8f;
+  background-color: #e9c46a;
 }
 
 a {
@@ -58,7 +57,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -68,5 +67,33 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+} */
+
+/* Light Theme Style */
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #484b6a;
+    background-color: #d2d3db; 
+  }
+
+  button {
+    background-color: #eee;
+    color: #333;
+    border: 1px solid #ddd;
+  }
+}
+
+/* Dark Theme Style */
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #f0f4f8;
+    background-color: #486581;
+  }
+
+  button {
+    background-color: #333;
+    color: #eee;
+    border: 1px solid #555;
   }
 }
