--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
   color-scheme: light dark;
   color: #2a9d8f;
   background-color: #e9c46a;
@@ -57,7 +58,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -68,7 +69,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
 
 /* Light Theme Style */
 @media (prefers-color-scheme: light) {
@@ -84,7 +85,7 @@ button:focus-visible {
   }
 }
 
-/* Dark Theme Style */
+/* Dark Theme Styles */
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f0f4f8;
